start to create earth

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   padding: 0;
   margin: 0;
 }
@@ -9,4 +9,4 @@ html, body {
 	height: 100%;
 	overflow: hidden;
 	background: linear-gradient(#251770, #29e9ff);
-}
+} */
